Fixed size and spacing issues on mobile view.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -27,11 +27,19 @@
     }
 
     .card {
-        padding-left: 2.25rem;
-        font-size: 0.75rem;
+        padding: 1.5rem 1.75rem;
+        font-size: .8125rem;
+        line-height: 2;
+        margin: 1.5rem .75rem;
+        height: 225px;
     }
 
     .card h2 {
-        font-size: 1.125rem;
+        font-size: 1.25rem;
+        line-height: 1;
+    }
+
+    .card img {
+        right: 2.25rem;
     }
 }
